dev/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: admin
  name: admin
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: admin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - image: latest
        imagePullPolicy: Always
        name: admin
        command: ["/bin/sh", "start"]
        resources:
          requests:
            cpu: 0.1
          limits:
            cpu: 1
        ports:
          - containerPort: 5000
            protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
